--- a/src/App.css
+++ b/src/App.css
@@ -13,19 +13,9 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
+.test_button{
+  height: 20px;
+  width: 60px;
 }
 
 @keyframes App-logo-spin {
