--- a/src/App.css
+++ b/src/App.css
@@ -26,3 +26,12 @@
     transform: rotate(360deg);
   }
 }
+
+.header{
+  padding: 20px 60px 20px;
+  background-color: aqua;
+}
+.link{
+  margin-left: 20px;
+  text-decoration: none;
+}
